src/BadScript.Tests/tests/passing/types/table/properties/set.bs
t = {
	a = 0
}

t.a = 1
return t.a == 1