src/BadScript.Tests/tests/failing/invalid-syntax/invalidForEach_02.bs
t = {}
foreach a yeet t
{
	
}